Fixed spacing of bubbleChart

--- a/dashboard/static/bubbleChartStyles.css
+++ b/dashboard/static/bubbleChartStyles.css
@@ -1,3 +1,8 @@
+#combo{
+  margin-bottom: 30px;
+}
+
+
 .tick text{
   font-size: 1.7em;
   color: rgb(110, 110, 110);
